MDEV-19353 : Alter Sequence do not replicate to another nodes with in Galera Cluster

Galera replication of new DDL-case was missing